libfli (1.7-0r1) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * Set team maintaineance to the Debian Krap Maintainers, with myself as
    comaintainer.
  * Rename source to libfli.

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Wed, 03 Mar 2010 16:27:32 +0100

libfli1 (1.7-0ubuntu1) jaunty; urgency=low

  * Update packaging for initial Ubuntu upload

 -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 13 Feb 2009 20:47:25 +0000

libfli1 (1.7) gutsy; urgency=low

  * Initial release

 -- Jasem Mutlaq <mutlaqja@ikarustech.com>  Sat, 4 Oct 2008 12:00:00 +0300