@@ -3,7 +3,7 @@ Section: libs
 Priority: extra
 Maintainer: Debian Krap Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Pino Toscano <pino@kde.org>
-Build-Depends: debhelper (>= 6), cdbs, cmake
+Build-Depends: debhelper (>= 7.0.50~), cmake
 Standards-Version: 3.8.0
 Homepage: http://indi.sourceforge.net/
 
