@@ -1,2 +1,2 @@
-debian/tmp/usr/include/*.h
-debian/tmp/usr/lib/libfli.so
+usr/include/*.h
+usr/lib/libfli.so
