@@ -1,4 +1,5 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/class/cmake.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
+%:
+	dh $@
+
