@@ -4,8 +4,14 @@ libfli (1.7-0r1) UNRELEASED; urgency=low
   * Set team maintaineance to the Debian Krap Maintainers, with myself as
     comaintainer.
   * Rename source to libfli.
+  * Switch to debhelper 7:
+    - raise debhelper Build-Depends to 7.0.50~
+    - bump compat to 7
+    - update install files
+    - simplify rules
+    - drop cdbs from Build-Depends
 
- -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Wed, 03 Mar 2010 16:27:32 +0100
+ -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Wed, 03 Mar 2010 16:39:58 +0100
 
 libfli1 (1.7-0ubuntu1) jaunty; urgency=low
 
